--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <div class="bg-mask"></div>
     <div class="player">
       <div class="player-track">
-        <div class="album-name">红模仿</div>
-        <div class="track-name">周杰伦 - 红模仿</div>
+        <div class="album-name"></div>
+        <div class="track-name"></div>
         <div class="track-time">
-          <div class="current-time">00:00</div>
-          <div class="total-time">03:50</div>
+          <div class="current-time"></div>
+          <div class="total-time"></div>
         </div>
         <div class="progress-box">
-          <div class="hover-time">00:36</div>
+          <div class="hover-time"></div>
           <div class="hover-bar"></div>
           <div class="progress-bar"></div>
         </div>
