--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <img src="./mp3/cover/忘川彼岸.jpeg" alt="">
           <img src="./mp3/cover/Way Back Home.jpg" alt="">
           <img src="./mp3/cover/起风了.jpg" alt="">
+          <img src="./mp3/cover/知足.jpeg" alt="">
         </div>
         <div class="play-controls">
           <div class="control">
