--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>欢迎登录</title>
+  <title>lyff的音乐播放器</title>
 <!--  <link rel="stylesheet" type="text/css" href="./css/login.css"/>-->
 
   <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
