Signed-off-by: 卢聪 <1181972404@qq.com>

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <img src="./mp3/cover/Way Back Home.jpg" alt="">
           <img src="./mp3/cover/起风了.jpg" alt="">
           <img src="./mp3/cover/知足.jpeg" alt="">
+          <img src="./mp3/cover/海阔天空.jpeg" alt="">
         </div>
         <div class="play-controls">
           <div class="control">
